--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,47 @@
 spring.application.name=Personal
+
+spring.profiles.active=prod
+
+server.port=11000
+
+spring.config.import=classpath:application-secrets.properties
+
+# MariaDB Connection info #jdbc:mariadb://{IP}/{DB}
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://192.168.159.129:3306/myDB
+##spring.datasource.url=jdbc:mariadb://192.168.236.130:3306/KPaaS
+#spring.datasource.username=poly
+#spring.datasource.password=1234
+
+# DTO Location
+mybatis.type-aliases-package=kopo.poly.dto
+
+# SQL Query Location
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+# DTO Mapping camel case
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# JSP Location
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+#Multipart ?? ?? ?? ??
+# ?? ??? ?? ??
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
+server.tomcat.max-http-form-post-size=20MB
+
+# image store root
+upload.dir.rootPath=nestify-interior-design.s3.ap-northeast-2.amazonaws.com
+
+# S3
+cloud.aws.s3.bucket=nestify-interior-design
+cloud.aws.s3.region.static=ap-northeast-2
+cloud.aws.stack.auto=false
+
+
+# S3 ?? ?? ??
+s3.folder.temporary=temporary/
+s3.folder.user-images=user-images/
+s3.folder.generated-images=generated-images/
