--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,17 @@ spring.config.import=classpath:application-secrets.properties
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
 server.tomcat.max-http-form-post-size=20MB
+
+
+#MongoDB Connection
+spring.data.mongodb.host=192.168.159.129
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=MyDB
+spring.data.mongodb.username=myUser
+spring.data.mongodb.password=1234
+
+# RedisDB Connection
+spring.data.redis.host=192.168.159.129
+spring.data.redis.port=6379
+spring.data.redis.username=poly
+spring.data.redis.password=1234
