--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,16 @@ spring.data.redis.host=192.168.159.129
 spring.data.redis.port=6379
 spring.data.redis.username=poly
 spring.data.redis.password=1234
+
+# Thymeleaf ??
+# ??? ?? ?? ?? (false: ?? ??? ??? ???? ??)
+spring.thymeleaf.cache=false
+
+# ??? ?? ??? ?? (??? ??? ??? ????? ??)
+spring.thymeleaf.check-template-location=true
+
+# Thymeleaf ??? ?? ??
+spring.thymeleaf.prefix=classpath:/templates/
+
+# Thymeleaf ??? ??? ??? ?? (.html ??)
+spring.thymeleaf.suffix=.html
