--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,10 @@ spring.servlet.multipart.max-request-size=20MB
 server.tomcat.max-http-form-post-size=20MB
 
 
-#MongoDB Connection
-spring.data.mongodb.host=192.168.159.129
+#MongoDB Connection(school)
+#spring.data.mongodb.host=192.168.159.129
+#MongoDB Connection(home)
+spring.data.mongodb.host=192.168.236.130
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=MyDB
 spring.data.mongodb.username=myUser
