--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,20 +18,31 @@ spring.data.mongodb.username=myUser
 spring.data.mongodb.password=1234
 
 # RedisDB Connection
-spring.data.redis.host=192.168.159.129
-spring.data.redis.port=6379
-spring.data.redis.username=poly
-spring.data.redis.password=1234
+#spring.data.redis.host=192.168.159.129
+#spring.data.redis.port=6379
+#spring.data.redis.username=poly
+#spring.data.redis.password=1234
 
-# Thymeleaf ??
-# ??? ?? ?? ?? (false: ?? ??? ??? ???? ??)
+# ?? ?? ?? (DEBUG ?? ??)
+logging.level.org.springframework=DEBUG
+logging.level.org.apache.tomcat=DEBUG
+logging.level.root=DEBUG
+
+# Thymeleaf ??? ????? false? ?? (???? ????, ?? ??)
 spring.thymeleaf.cache=false
 
-# ??? ?? ??? ?? (??? ??? ??? ????? ??)
+# Thymeleaf ??? ?? ??? true? ?? (???? ????, ?? ??)
 spring.thymeleaf.check-template-location=true
 
-# Thymeleaf ??? ?? ??
+# Thymeleaf ???/??? ?? (???? ????, ?? ??)
 spring.thymeleaf.prefix=classpath:/templates/
-
-# Thymeleaf ??? ??? ??? ?? (.html ??)
 spring.thymeleaf.suffix=.html
+
+# Spring Boot ?? ?? ??? (?? ????? ?? ??? ??)
+# spring-boot-devtools ???? ??? ??????.
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+
+# Spring Boot? ??? ?? ???? (Thymeleaf ?? Spring Boot ?? ??? ????)
+spring.web.resources.cache.cachecontrol.no-cache=true
+spring.web.resources.cache.period=-1
