--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,8 @@ spring.data.mongodb.database=MyDB
 spring.data.mongodb.username=myUser
 spring.data.mongodb.password=1234
 
-# Thymeleaf ??? ????? false? ?? (???? ????, ?? ??)
+# Thymeleaf
 spring.thymeleaf.cache=false
-
-# Thymeleaf ??? ?? ??? true? ?? (???? ????, ?? ??)
 spring.thymeleaf.check-template-location=true
-
-# Thymeleaf ???/??? ?? (???? ????, ?? ??)
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
