--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.servlet.multipart.max-request-size=20MB
 server.tomcat.max-http-form-post-size=20MB
 
 
-#MongoDB Connection(school)
+#MongoDB Connection
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=MyDB
 spring.data.mongodb.username=myUser
