--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,10 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+# ?? ?? ????(ms)
+feign.client.config.default.connectTimeout=60000
+feign.client.config.default.readTimeout=180000
+
+# ? ?? ?? (??/?? ???? ?? ??? FULL)
+feign.client.config.default.loggerLevel=FULL
