feig 적용 및 admin 월별 사용자 집계 aggregation 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,14 @@
 spring.application.name=Haroomedi
-
 spring.profiles.active=prod
-
 server.port=11000
-
 spring.config.import=classpath:application-secrets.properties
 
+# ?? ??? ??
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
 server.tomcat.max-http-form-post-size=20MB
 
-
-#MongoDB Connection
+# MongoDB
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=MyDB
 spring.data.mongodb.username=myUser
@@ -23,9 +20,18 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-# ?? ?? ????(ms)
-feign.client.config.default.connectTimeout=60000
-feign.client.config.default.readTimeout=180000
+# ? OpenFeign: ?? ??????? ??
+spring.cloud.openfeign.okhttp.enabled=true
+spring.cloud.openfeign.client.config.default.connectTimeout=60000
+spring.cloud.openfeign.client.config.default.readTimeout=180000
+spring.cloud.openfeign.client.config.default.loggerLevel=FULL
 
-# ? ?? ?? (??/?? ???? ?? ??? FULL)
-feign.client.config.default.loggerLevel=FULL
+# Tilko ?? ?? (client name = tilkoClient)
+spring.cloud.openfeign.client.config.tilkoClient.connectTimeout=60000
+spring.cloud.openfeign.client.config.tilkoClient.readTimeout=180000
+spring.cloud.openfeign.client.config.tilkoClient.loggerLevel=FULL
+
+# (??) OpenAI ?????? ?? ????/??
+spring.cloud.openfeign.client.config.openaiClient.connectTimeout=30000
+spring.cloud.openfeign.client.config.openaiClient.readTimeout=60000
+spring.cloud.openfeign.client.config.openaiClient.loggerLevel=BASIC
